--- a/css/personalize.css
+++ b/css/personalize.css
@@ -29,6 +29,36 @@ li.tag-4 {
     font-size: 80%;
 }
 
+/* fix alignment of logo vs text */
+#header .logo img {
+    vertical-align: middle;
+}
+
+/* Tipue Search Related Formatting to gel with the theme */
+input.search-query {
+    float: left;
+    width: 80%;
+    background-color: #f3f3f3;
+    border: none;
+   -moz-appearance: none;
+   -webkit-appearance: none;
+}
+
+button.search-button {
+    min-width: 10%;
+    margin-left: 4%;
+    width:16%;
+    text-align: center;
+    align-content: center;
+}
+
+.tipue_search_content_title h3 {
+    margin-bottom: 0;
+}
+
+.tipue_search_content_url, .tipue_search_content_debug {
+    font-size: 80%
+}
 
 /*
 ul.tagcloud li.list-group-item span.badge {
