deploy: pawanrajs/pawanrajs.com@0578251b90e94902729e9f370143be356db055cf

--- a/css/custom.css
+++ b/css/custom.css
@@ -39,6 +39,8 @@ div.pagination-right {
 
 }
 
+/******************** ICONS FOR SOCIAL ***********************/
+
 /* Social Icons for linkedin and email */
 .icon.circle.fa-linkedin {
     background: #7490c3;
